<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/event_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event" />

        <Button
            android:id="@+id/calendar_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calendar" />

        <Button
            android:id="@+id/my_profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_profile" />

        <Button
            android:id="@+id/create_event_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_event" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>