<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="2dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    android:orientation="vertical"
    android:layout_margin="12dp"
    android:id="@+id/user_profile_activity">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_profile_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_corner_button">

        <LinearLayout
            android:id="@+id/personal_detail_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:background="@drawable/rounded_corner_button">

            <TextView
                android:id="@+id/user_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:paddingBottom="8dp"
                android:text="@string/my_profile"
                android:textColor="@color/colorBlack"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <RelativeLayout
                android:id="@+id/user_profile_expandable_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">
                <!-- First name Text Views  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
                <TextView
                    android:id="@+id/first_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:paddingStart="16dp"
                    android:padding="8dp"
                    android:textStyle="bold"/>

                <!-- Surname Text Views  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->

                <TextView
                    android:id="@+id/user_first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_toEndOf="@+id/first_name_label"
                    android:padding="8dp"
                    android:text="@string/user_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/user_surname_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Surname:"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:paddingStart="16dp"
                    android:padding="8dp"
                    android:layout_below="@+id/user_first_name"
                    android:textStyle="bold"/>

                <!-- Email Text Views  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->

                <TextView
                    android:id="@+id/user_surname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_first_name"
                    android:layout_marginStart="43dp"
                    android:layout_marginTop="-1dp"
                    android:layout_toEndOf="@+id/user_surname_label"
                    android:padding="8dp"
                    android:text="User Surname"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/user_email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email Address:"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingStart="16dp"
                    android:padding="8dp"
                    android:layout_below="@+id/user_surname"/>

                <TextView
                    android:id="@+id/user_email_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_surname"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="-1dp"
                    android:layout_marginEnd="9dp"
                    android:layout_toEndOf="@+id/user_email_label"
                    android:padding="8dp"
                    android:text="User Email"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/user_event_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="21dp"
        android:layout_margin="8dp">

            <LinearLayout
                android:id="@+id/user_event_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:background="@drawable/rounded_corner_button">
                <TextView
                    android:id="@+id/user_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:padding="16dp"
                    android:text="@string/my_jobs"
                    android:textColor="@color/colorBlack"
                    android:textSize="22sp"
                    />
                <RelativeLayout
                    android:id="@+id/user_event_expandable_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:background="@color/colorGrey">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/user_event_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>

            </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>